--- a/package.json
+++ b/package.json
@@ -51,9 +51,7 @@
     "env": {
       "cypress/globals": true
     },
-    "plugins": [
-      "cypress"
-    ]
+    "plugins": []
   },
   "browserslist": {
     "production": [
@@ -69,8 +67,7 @@
   },
   "devDependencies": {
     "cypress": "^14.2.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-cypress": "^4.2.0",
+    "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
     "start-server-and-test": "^2.0.3"
   },
