--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "CI=false GENERATE_SOURCEMAP=false react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
-    "e2e": "start-server-and-test start http://localhost:3000 cypress:run"
-  },
+  "start": "react-scripts start",
+  "build": "node build.js",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "lint": "eslint .",
+  "lint:fix": "eslint . --fix",
+  "cypress:open": "cypress open",
+  "cypress:run": "cypress run",
+  "e2e": "start-server-and-test start http://localhost:3000 cypress:run"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -66,10 +66,12 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^19.0.12",
     "cypress": "^14.2.0",
     "eslint": "^9.23.0",
     "eslint-plugin-react": "^7.37.4",
-    "start-server-and-test": "^2.0.3"
+    "start-server-and-test": "^2.0.3",
+    "typescript": "^4.9.5"
   },
   "overrides": {
     "react": "^18.2.0",
