Firebase App Hosting 설정 추가

--- a/.firebaserc
+++ b/.firebaserc
@@ -7,6 +7,9 @@
       "hosting": {
         "mytripstyle": [
           "production"
+        ],
+        "app": [
+          "mytripstyle-app"
         ]
       }
     }
