--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,10 +50,10 @@ jobs:
           echo "REACT_APP_FIREBASE_STORAGE_BUCKET=${{ secrets.FIREBASE_STORAGE_BUCKET }}" >> .env.production
           echo "REACT_APP_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}" >> .env.production
           echo "REACT_APP_FIREBASE_APP_ID=${{ secrets.FIREBASE_APP_ID }}" >> .env.production
-          echo "REACT_APP_FIREBASE_MEASUREMENT_ID=${{ secrets.FIREBASE_MEASUREMENT_ID }}" >> .env.production
-          echo "REACT_APP_MAPS_API_KEY=${{ secrets.MAPS_API_KEY }}" >> .env.production
-          echo "REACT_APP_WEATHER_API_KEY=${{ secrets.WEATHER_API_KEY }}" >> .env.production
-          echo "REACT_APP_API_URL=${{ secrets.API_URL }}" >> .env.production
+          # echo "REACT_APP_FIREBASE_MEASUREMENT_ID=${{ secrets.FIREBASE_MEASUREMENT_ID }}" >> .env.production
+          # echo "REACT_APP_MAPS_API_KEY=${{ secrets.MAPS_API_KEY }}" >> .env.production
+          # echo "REACT_APP_WEATHER_API_KEY=${{ secrets.WEATHER_API_KEY }}" >> .env.production
+          # echo "REACT_APP_API_URL=${{ secrets.API_URL }}" >> .env.production
           echo "REACT_APP_DEFAULT_LOCATION_LAT=37.5642135" >> .env.production
           echo "REACT_APP_DEFAULT_LOCATION_LNG=127.0016985" >> .env.production
           echo "REACT_APP_DEFAULT_ZOOM=13" >> .env.production
@@ -94,14 +94,22 @@ jobs:
         run: npm ci
         working-directory: ${{ env.WORKING_DIRECTORY }}/functions
   
-      # Firebase 배포
-      - name: Deploy to Firebase
+      # Firebase 기본 호스팅 배포
+      - name: Deploy to Firebase Hosting
         uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
           channelId: live
           projectId: ${{ secrets.FIREBASE_PROJECT_ID }}
+          target: mytripstyle
+      
+      # Firebase App Hosting 배포 (추가)
+      - name: Deploy to Firebase App Hosting
+        run: |
+          firebase target:apply hosting app mytripstyle-app
+          firebase deploy --only hosting:app --project ${{ secrets.FIREBASE_PROJECT_ID }} --token "${{ secrets.FIREBASE_TOKEN }}"
+        working-directory: ${{ env.WORKING_DIRECTORY }}
     
       # Cloud Functions 배포 (별도 단계)
       - name: Deploy Cloud Functions
@@ -113,16 +121,16 @@ jobs:
         run: firebase deploy --only firestore:rules,storage:rules --token "${{ secrets.FIREBASE_TOKEN }}" --project "${{ secrets.FIREBASE_PROJECT_ID }}"
         working-directory: ${{ env.WORKING_DIRECTORY }}
 
-      # 배포 완료 알림 (선택 사항 - Slack, Discord 등)
-      - name: Notify deployment
-        uses: rtCamp/action-slack-notify@v2
-        if: always()
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
-          SLACK_CHANNEL: deployments
-          SLACK_COLOR: ${{ job.status }}
-          SLACK_ICON: https://github.com/rtCamp.png?size=48
-          SLACK_MESSAGE: 'MyTripStyle 프로덕션 배포 ${{ job.status }}'
-          SLACK_TITLE: 배포 결과
-          SLACK_USERNAME: GitHub Actions
-        continue-on-error: true
+      # 배포 완료 알림 (주석 처리)
+      # - name: Notify deployment
+      #   uses: rtCamp/action-slack-notify@v2
+      #   if: always()
+      #   env:
+      #     SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+      #     SLACK_CHANNEL: deployments
+      #     SLACK_COLOR: ${{ job.status }}
+      #     SLACK_ICON: https://github.com/rtCamp.png?size=48
+      #     SLACK_MESSAGE: 'MyTripStyle 프로덕션 배포 ${{ job.status }}'
+      #     SLACK_TITLE: 배포 결과
+      #     SLACK_USERNAME: GitHub Actions
+      #   continue-on-error: true
